fix header spacing on projects, update resume

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,7 +204,7 @@ input, select, textarea {
 	h2 {
 		font-size: 1.75rem;
 		line-height: 1.3;
-		margin: 0 0 1.5rem 0;
+		margin: 0 0 0rem 0;
 	}
 
 	h3 {
@@ -4010,7 +4010,7 @@ input, select, textarea {
 		}
 
 		#projects {
-			margin-top: 5rem;
+			margin-top: 3rem;
 			display: flex;
 			flex-wrap:wrap;
 			justify-content:center;
